# Roll-Control

./: README.md
.ipynb_checkpoints/: wtfisgoingon-checkpoint.py
Data Generating Demo/data_gen/: app.json  package-lock.json  package.json
Data Generating Demo/data_gen/app/: index.tsx
Image Processing/: DataStorage.py  Flatten.py  Pipeline.py  Scanner.py  Stage.py  main.py  pyproject.toml
Image Processing/Stages/: Clean.py  Flatten.py  Orient.py  Stage.py
Plotting/: FT_Data_Frequency.m  generate_flight.py  lowpass_filter_plot.py  max_roll_plotting.py  plot_gyro_roll_angmom.py  wtfisgoingon.csv
Plotting/Data/: 3_15_drop_1.csv
Plotting/Data/Synthetic/: synthetic_roll_accel_1.csv  synthetic_roll_accel_2.csv  synthetic_roll_accel_3.csv  synthetic_roll_accel_4.csv  synthetic_roll_accel_5.csv
Plotting/DerivativesandSmoothing/: derivativesandsmoothing.ipynb
Simulink/: ft_main_roll_only.m  motor_scoping.slx  motor_scoping.slx.autosave  motor_scoping.slxc  sgolay_block.m  simscape_motor.slx  simscape_motor.slx.autosave  simscape_motor.slx.original  simscape_motor.slxc  simulink_model.slx  simulink_model.slx.autosave  simulink_model.slx.bak  simulink_model.slxc  system_id.slx  system_id.slx.autosave
Simulink/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  slmqptMgQerVf3ISgKA1bhF.mat
Simulink/slprj/_sfprj/simscape_motor/: amsi_serial.mat
Simulink/slprj/sim/varcache/motor_scoping/: checksumOfCache.mat  varInfo.mat
Simulink/slprj/sim/varcache/simscape_motor/: checksumOfCache.mat  varInfo.mat
Simulink/slprj/sim/varcache/simulink_model/: checksumOfCache.mat  (+1 more)
(+4 files in other folders)
